# voxel

./: .gitignore  CMakeLists.txt  README.md  runvox.sh  todo.txt
include/: Block.h  Chunk.h  IndexBuffer.h  Renderer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  shader.h
shaders/: vertex.glsl
src/: Block.cpp  Chunk.cpp  Renderer.cpp  VertexArray.cpp  main.cpp
src/Physics/: Physics.cpp  Physics.h
src/Renderer/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
src/World/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  NoiseGenerator.cpp  NoiseGenerator.h
